--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="content">
             <h2 class="games-center">ゲームセンター</h2>
             <p>ゲーセン行こうぜ！作っていきます</p>
-            <a href="https://example.com" class="page-link">ページに移動</a>
+            <a href="https://protolht.github.io/" class="page-link">ページに移動</a>
         </div>
 
         <div class="content">
             <h2 class="game-list">ゲーム一覧</h2>
             <p>作成したゲームを乗せていきます</p>
-            <a href="https://protolht.github.io/" class="page-link">ページに移動</a>
+            <a href="https://protolht.github.io/HungryBahmut/index.html" class="page-link">ページに移動</a>
         </div>
 
         <div class="content">
