--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="content">
             <h2 class="game-list">ゲーム一覧</h2>
             <p>作成したゲームを乗せていきます</p>
-            <a href="https://protolht.github.io/gamecenter" class="page-link">ページに移動</a>
+            <a href="https://protolht.github.io/gamecenter/index.html" class="page-link">ページに移動</a>
         </div>
 
         <div class="content">
