--- a/gamecenter/index.html
+++ b/gamecenter/index.html
@@ -45,6 +45,6 @@
         <p>全てのゲームは、ブラウザ上でプレイ可能です。是非お試しください。</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
