--- a/gamecenter/index.html
+++ b/gamecenter/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.cs">
+    <link rel="stylesheet" href="style.css">
     <title>Game Center</title>
 </head>
 <body>
