--- a/gamecenter/index.html
+++ b/gamecenter/index.html
@@ -34,6 +34,12 @@
             <p>ゲーム3は、プレイヤーが自分の宇宙船を操り、敵を撃退していくシューティングゲームです。</p>
             <a href="https://example.com/game3" class="page-link">プレイする</a>
         </div>
+
+        <div class="content">
+            <h2 class="game-title">ゲーム4</h2>
+            <p>ゲーム4は今から作ります。</p>
+            <a href="https://example.com/game3" class="page-link">プレイする</a>
+        </div>
     </div>
 
     <div class="about-section" id="about">
