--- a/gamecenter/index.html
+++ b/gamecenter/index.html
@@ -36,9 +36,9 @@
         </div>
 
         <div class="content">
-            <h2 class="game-title">ゲーム4</h2>
-            <p>ゲーム4は今から作ります。</p>
-            <a href="https://example.com/game3" class="page-link">プレイする</a>
+            <h2 class="game-title">じゃんけんしようぜ</h2>
+            <p>最古のゲーム、じゃんけんをしよう。</p>
+            <a href="https://protolht.github.io/gamecenter/Rock-Paper-Scissors/index.html" class="page-link">プレイする</a>
         </div>
     </div>
 
