--- a/gamecenter/index.html
+++ b/gamecenter/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="content">
-            <h2 class="game-title">じゃんけんしようぜ</h2>
+            <h2 class="game-title">じゃんけんしようぜ！</h2>
             <p>最古のゲーム、じゃんけんをしよう。</p>
             <a href="https://protolht.github.io/gamecenter/Rock-Paper-Scissors/index.html" class="page-link">プレイする</a>
         </div>
