--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>L home</h1>
+        <h1>ぬん　homepage</h1>
         <nav class="nav">
             <a href="#top" class="top">Top</a>
             <a href="#games" class="game">Games</a>
