--- a/gamecenter/index.html
+++ b/gamecenter/index.html
@@ -36,9 +36,15 @@
         </div>
 
         <div class="content">
-            <h2 class="game-title">じゃんけんしようぜ！</h2>
+            <h2 class="game-title">じゃんけん</h2>
             <p>最古のゲーム、じゃんけんをしよう。</p>
             <a href="https://protolht.github.io/gamecenter/Rock-Paper-Scissors/index.html" class="page-link">プレイする</a>
+        </div>
+        
+        <div class="content">
+            <h2 class="game-title">七並べ</h2>
+            <p>トランプゲームの王道</p>
+            <a href="https://protolht.github.io/gamecenter/Sevens/index.html" class="page-link">プレイする</a>
         </div>
     </div>
 
