--- a/gamecenter/index.html
+++ b/gamecenter/index.html
@@ -36,6 +36,12 @@
         </div>
 
         <div class="content">
+            <h2 class="game-title">自由律じゃんけん</h2>
+            <p>オリジナルの手を作成して戦え！</p>
+            <a href="https://example.com/game4" class="page-link">プレイする</a>
+        </div>
+
+        <div class="content">
             <h2 class="game-title">じゃんけん</h2>
             <p>最古のゲーム、じゃんけんをしよう。</p>
             <a href="https://protolht.github.io/gamecenter/Rock-Paper-Scissors/index.html" class="page-link">プレイする</a>
