--- a/gamecenter/Sevens/index.html
+++ b/gamecenter/Sevens/index.html
@@ -14,7 +14,7 @@
     <div class="game-container">
         <div class="hand" id="playerHand">あなたの手札: </div>
         <div class="table" id="gameTable">場: </div>
-        <div class="message" id="gameMessage"></div>
+        <div class="message" id="gameMessage">ゲーム開始！</div>
         <div class="actions">
             <button id="passBtn" class="game-btn">パス</button>
             <button id="playBtn" class="game-btn">カードを出す</button>
