--- a/gamecenter/Sevens/index.html
+++ b/gamecenter/Sevens/index.html
@@ -45,23 +45,18 @@
         }
 
         /* ボタンのデザイン */
-        .actions {
-            display: flex;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .game-btn {
+        .card-btn {
             background-color: #1a1a1a;
             border: 2px solid #adff2f;
             color: #adff2f;
             padding: 10px 20px;
             border-radius: 10px;
             cursor: pointer;
+            margin: 5px;
             transition: transform 0.3s ease, background-color 0.3s ease;
         }
 
-        .game-btn:hover {
+        .card-btn:hover {
             background-color: #adff2f;
             color: #000;
             transform: scale(1.1);
@@ -74,9 +69,6 @@
             }
             .hand, .table, .message {
                 width: 95%;
-            }
-            .game-btn {
-                padding: 8px 15px;
             }
         }
     </style>
@@ -91,8 +83,7 @@
         <div class="table" id="gameTable">場: </div>
         <div class="message" id="gameMessage">ゲーム開始！</div>
         <div class="actions">
-            <button id="passBtn" class="game-btn">パス</button>
-            <button id="playBtn" class="game-btn">カードを出す</button>
+            <button id="passBtn" class="card-btn">パス</button>
         </div>
     </div>
 
@@ -136,7 +127,14 @@
 
         function renderHand() {
             const playerHandDiv = document.getElementById('playerHand');
-            playerHandDiv.innerHTML = 'あなたの手札: ' + playerHand.join(', ');
+            playerHandDiv.innerHTML = '';
+            playerHand.forEach(card => {
+                const cardButton = document.createElement('button');
+                cardButton.textContent = card;
+                cardButton.className = 'card-btn';
+                cardButton.addEventListener('click', () => playCard(card));
+                playerHandDiv.appendChild(cardButton);
+            });
         }
 
         function renderTable() {
@@ -169,23 +167,16 @@
             return cardIndex === minTableRank - 1 || cardIndex === maxTableRank + 1;
         }
 
-        function playCard() {
-            if (playerHand.length === 0) {
-                updateMessage('全ての手札を出しました。あなたの勝利です！');
-                endGame();
-                return;
-            }
-
-            const card = playerHand.pop();
+        function playCard(card) {
             if (canPlayCard(card)) {
                 const suit = card.slice(0, -1);
                 table[suit].push(card);
                 table[suit].sort((a, b) => ranks.indexOf(a) - ranks.indexOf(b));
+                playerHand = playerHand.filter(c => c !== card);
                 renderHand();
                 renderTable();
                 updateMessage(`${card} を出しました。`);
             } else {
-                playerHand.push(card);
                 updateMessage(`${card} は場に出せません。`);
             }
 
@@ -232,15 +223,12 @@
 
         function endGame() {
             document.getElementById('passBtn').disabled = true;
-            document.getElementById('playBtn').disabled = true;
         }
 
         document.getElementById('passBtn').addEventListener('click', () => {
             pass();
             nextTurn();
         });
-
-        document.getElementById('playBtn').addEventListener('click', playCard);
 
         function pass() {
             passCount++;
