--- a/gamecenter/index.html
+++ b/gamecenter/index.html
@@ -34,7 +34,23 @@
             <p>ゲーム3は、プレイヤーが自分の宇宙船を操り、敵を撃退していくシューティングゲームです。</p>
             <a href="https://example.com/game3" class="page-link">プレイする</a>
         </div>
-
+        <div class="content">
+            <h2 class="game-title">腹ペコバハムート</h2>
+            <p>”本質”TCG</p>
+            <a href="https://example.com/game3" class="page-link">プレイする</a>
+        </div>
+        
+        <div class="content">
+            <h2 class="game-title">アールライバルス</h2>
+            <p>心理戦をしよう</p>
+            <a href="https://example.com/game3" class="page-link">プレイする</a>
+        </div>
+        <div class="content">
+            <h2 class="game-title">花見小路</h2>
+            <p>舞妓さんの心をつかめ！</p>
+            <a href="https://example.com/game3" class="page-link">プレイする</a>
+        </div>
+        
         <div class="content">
             <h2 class="game-title">自由律じゃんけん</h2>
             <p>オリジナルの手を作成して戦え！</p>
