--- a/gamecenter/Sevens/index.html
+++ b/gamecenter/Sevens/index.html
@@ -5,21 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>七並べ</title>
     <style>
+        /* ここにCSSを追加 */
+        .suit-row {
+            display: flex;
+            justify-content: center;
+            margin: 10px 0;
+        }
+
+        .suit-row span {
+            padding: 5px;
+            width: 30px;
+            text-align: center;
+            border: 1px solid #d4ff88;
+            margin-right: 5px;
+            border-radius: 5px;
+            background-color: #333;
+            color: #d4ff88;
+        }
+
+        .suit-row span:not(:last-child) {
+            margin-right: 8px;
+        }
+
         /* 全体の背景やフォント設定 */
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #000;
-            color: #adff2f;
+            background-color: #111; /* 少し明るめの黒 */
+            color: #d4ff88; /* 落ち着いた緑色 */
         }
 
         /* ヘッダーのスタイル */
         .header {
             text-align: center;
             padding: 20px;
-            background-color: #000;
-            color: #adff2f;
+            background-color: #222; /* ヘッダー背景も少し明るめの黒 */
+            color: #d4ff88;
             font-size: 2em;
         }
 
@@ -36,40 +58,34 @@
         .hand, .table, .message {
             margin: 20px 0;
             padding: 10px;
-            background-color: #1a1a1a;
+            background-color: #333; /* 暗いグレー */
             border-radius: 10px;
-            box-shadow: 0 6px 12px rgba(173, 255, 47, 0.5);
+            box-shadow: 0 6px 12px rgba(212, 255, 136, 0.5);
             width: 80%;
             text-align: center;
-            color: #adff2f;
+            color: #d4ff88;
         }
 
-        /* ボタンのデザイン */
-        .card-btn {
-            background-color: #1a1a1a;
-            border: 2px solid #adff2f;
-            color: #adff2f;
+        /* ボタンの色合いを調整 */
+        .actions {
+            display: flex;
+            gap: 20px;
+        }
+
+        .game-btn {
+            background-color: #333; /* 背景を少し明るく */
+            border: 2px solid #d4ff88;
+            color: #d4ff88;
             padding: 10px 20px;
             border-radius: 10px;
             cursor: pointer;
-            margin: 5px;
             transition: transform 0.3s ease, background-color 0.3s ease;
         }
 
-        .card-btn:hover {
-            background-color: #adff2f;
-            color: #000;
+        .game-btn:hover {
+            background-color: #d4ff88;
+            color: #111; /* ホバー時の文字色はダークに */
             transform: scale(1.1);
-        }
-
-        /* レスポンシブ対応 */
-        @media screen and (max-width: 768px) {
-            .game-container {
-                padding: 10px;
-            }
-            .hand, .table, .message {
-                width: 95%;
-            }
         }
     </style>
 </head>
@@ -80,167 +96,13 @@
 
     <div class="game-container">
         <div class="hand" id="playerHand">あなたの手札: </div>
-        <div class="table" id="gameTable">場: </div>
+        <div class="table" id="gameTable">場:</div> <!-- ここにカードを表示 -->
         <div class="message" id="gameMessage">ゲーム開始！</div>
         <div class="actions">
-            <button id="passBtn" class="card-btn">パス</button>
+            <button id="passBtn" class="game-btn">パス</button>
         </div>
     </div>
 
-    <script>
-        const suits = ['ハート', 'ダイヤ', 'クラブ', 'スペード'];
-        const ranks = ['2', '3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K', 'A'];
-        let deck = [];
-        let playerHand = [];
-        let computerHands = [[], [], []];
-        let table = {
-            'ハート': ['7'], 'ダイヤ': ['7'], 'クラブ': ['7'], 'スペード': ['7']
-        };
-        let passCount = 0;
-        let currentPlayer = 0;
-
-        function createDeck() {
-            for (let suit of suits) {
-                for (let rank of ranks) {
-                    if (rank !== '7') {
-                        deck.push(`${suit}${rank}`);
-                    }
-                }
-            }
-        }
-
-        function shuffleDeck(deck) {
-            for (let i = deck.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [deck[i], deck[j]] = [deck[j], deck[i]];
-            }
-        }
-
-        function dealCards() {
-            while (deck.length) {
-                playerHand.push(deck.pop());
-                computerHands[0].push(deck.pop());
-                computerHands[1].push(deck.pop());
-                computerHands[2].push(deck.pop());
-            }
-        }
-
-        function renderHand() {
-            const playerHandDiv = document.getElementById('playerHand');
-            playerHandDiv.innerHTML = '';
-            playerHand.forEach(card => {
-                const cardButton = document.createElement('button');
-                cardButton.textContent = card;
-                cardButton.className = 'card-btn';
-                cardButton.addEventListener('click', () => playCard(card));
-                playerHandDiv.appendChild(cardButton);
-            });
-        }
-
-        function renderTable() {
-            const gameTableDiv = document.getElementById('gameTable');
-            let tableDisplay = '場: ';
-            for (let suit in table) {
-                tableDisplay += `${suit}: ${table[suit].join(', ')} | `;
-            }
-            gameTableDiv.innerHTML = tableDisplay;
-        }
-
-        function updateMessage(msg) {
-            const gameMessage = document.getElementById('gameMessage');
-            gameMessage.innerHTML = msg;
-        }
-
-        function canPlayCard(card) {
-            const suit = card.slice(0, -1);
-            const rank = card.slice(-1);
-            const tableRanks = table[suit];
-
-            if (tableRanks.includes(rank)) {
-                return false;
-            }
-
-            const cardIndex = ranks.indexOf(rank);
-            const minTableRank = ranks.indexOf(tableRanks[0]);
-            const maxTableRank = ranks.indexOf(tableRanks[tableRanks.length - 1]);
-
-            return cardIndex === minTableRank - 1 || cardIndex === maxTableRank + 1;
-        }
-
-        function playCard(card) {
-            if (canPlayCard(card)) {
-                const suit = card.slice(0, -1);
-                table[suit].push(card);
-                table[suit].sort((a, b) => ranks.indexOf(a) - ranks.indexOf(b));
-                playerHand = playerHand.filter(c => c !== card);
-                renderHand();
-                renderTable();
-                updateMessage(`${card} を出しました。`);
-            } else {
-                updateMessage(`${card} は場に出せません。`);
-            }
-
-            if (playerHand.length === 0) {
-                updateMessage('全ての手札を出しました。あなたの勝利です！');
-                endGame();
-            } else {
-                nextTurn();
-            }
-        }
-
-        function computerPlayCard(computerIndex) {
-            if (computerHands[computerIndex].length === 0) {
-                updateMessage(`コンピュータ${computerIndex + 1}の勝利です！`);
-                endGame();
-                return;
-            }
-
-            const card = computerHands[computerIndex].pop();
-            if (canPlayCard(card)) {
-                const suit = card.slice(0, -1);
-                table[suit].push(card);
-                table[suit].sort((a, b) => ranks.indexOf(a) - ranks.indexOf(b));
-                renderTable();
-                updateMessage(`コンピュータ${computerIndex + 1}が ${card} を出しました。`);
-            } else {
-                computerHands[computerIndex].push(card);
-                updateMessage(`コンピュータ${computerIndex + 1}はパスしました。`);
-            }
-        }
-
-        function nextTurn() {
-            if (currentPlayer === 0) {
-                currentPlayer = 1;
-            } else if (currentPlayer === 1 || currentPlayer === 2 || currentPlayer === 3) {
-                computerPlayCard(currentPlayer - 1);
-                currentPlayer = (currentPlayer + 1) % 4;
-            }
-
-            if (currentPlayer === 0) {
-                updateMessage('あなたのターンです。カードを出してください。');
-            }
-        }
-
-        function endGame() {
-            document.getElementById('passBtn').disabled = true;
-        }
-
-        document.getElementById('passBtn').addEventListener('click', () => {
-            pass();
-            nextTurn();
-        });
-
-        function pass() {
-            passCount++;
-            updateMessage('パスしました。');
-        }
-
-        createDeck();
-        shuffleDeck(deck);
-        dealCards();
-        renderHand();
-        renderTable();
-        updateMessage('ゲーム開始！');
-    </script>
+    <script src="javascript.js"></script> <!-- 外部スクリプト -->
 </body>
 </html>
