--- a/gamecenter/Sevens/index.html
+++ b/gamecenter/Sevens/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <h1>七並べゲーム</h1>
+    
+    <h2>場</h2>
     <div id="game-board"></div>
-    <button id="start-game">ゲームスタート</button>
+
+    <h2>手札</h2>
+    <div id="hand-board"></div>
+
     <div id="message"></div>
     <script src="script.js"></script>
 </body>
