--- a/gamecenter/Sevens/index.html
+++ b/gamecenter/Sevens/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="controls">
         <button id="passButton" onclick="playerPass()">パス</button>
-        <div id="playerCards"></div>
+        <div id="playerCards">あなたの手札:</div>
     </div>
     <div id="message"></div>
 
